--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,5 +1,6 @@
 <ul class="list-group">
-  <li (click)="setCurrentCategory(category)" *ngFor="let category of categories" 
+  <li (click)="setCurrentCategory(category)" *ngFor="let category of categories"
+  routerLink = "/products/category/{{category.categoryId}}" 
   [class]="getCurrentCategoryClass(category)">{{category.categoryName}}</li>
 </ul>
 
