--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,6 +2,13 @@
   <span class="visually-hidden">Loading...</span>
 </div>
 
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Ürün Ara</label>
+  <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="Ürün adı giriniz..">
+</div>
+<div *ngIf="filterText" class="alert alert-success">
+{{filterText}} aradınız
+</div>
 <table *ngIf="dataLoaded == true" class="table">
   <thead>
     <tr>
@@ -9,14 +16,16 @@
         <th>Ürün adı</th>
         <th>Kategori</th>
         <th>Fiyat</th>
+        <th>Kdvli Fiyat</th>
         <th>Stok Adedi</th>
     </tr>
   </thead>
   <tr *ngFor="let product of products">
     <td>{{ product.productId }}</td>
-    <td>{{ product.productName }}</td>
-    <td>{{ product.unitPrice }}</td>
+    <td>{{ product.productName | uppercase }}</td>
     <td>{{ product.categoryId }}</td>
+    <td>{{ product.unitPrice }}</td>
+    <td>{{ product.unitPrice | vatAdded:18 | currency }} </td>  
     <td>{{ product.unitsInStock }}</td>
   </tr>
 </table>
