--- a/src/app/components/product-add/product-add.component.html
+++ b/src/app/components/product-add/product-add.component.html
@@ -1,55 +1,54 @@
-<div class="container">
-  <div class="col-md-12">
-    <div class="card">
-      <div class="card-header"><h5 class="title">Ürün Ekle</h5></div>
-      <div class="card-body">
-        <form [formGroup]="productAddForm">
-            <label for="productName"> Ürün Adı</label>
-          <div class="mb-3">
-            <input
-              type="text"
-              id="productName"
-              formControlName="productName"
-              class="form-control"
-              placeholder="Ürün Adı"
-            />
-          </div>
-          <label for="categoryId"> Kategori ID</label>
-          <div class="mb-3">
-            <input
-              type="number"
-              id="categoryId"
-              formControlName="categoryId"
-              class="form-control"
-              placeholder="kategori Adı"
-            />
-          </div>
-          <label for="unitPrice"> Birim Fiyatı</label>
-          <div class="mb-3">
-            <input
-              type="number"
-              id="unitPrice"
-              formControlName="unitPrice"
-              class="form-control"
-              placeholder="Birim Fiyat"
-            />
-          </div>
-          <label for="unitsInStock"> Stok Sayısı</label>
-          <br>
-          <div class="mb-3">
-            <input
-              type="number"
-              id="unitsInStock"
-              formControlName="unitsInStock"
-              class="form-control"
-              placeholder="Stok Adedi"
-            />
-          </div>
-        </form>
-      </div>
-      <div class="card-footer">
-<button class="btn btn-fill btn-success" (click)="add()">Ürünü Ekle</button>
-      </div>
+<div class="content">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header"><h5 class="title">Ürün ekle</h5></div>
+            <div class="card-body">
+                <form [formGroup]="productAddForm">
+                    <div class="mb-3">
+                        <label for="productName">Ürün adı</label>
+                        <div class="form-group">
+                            <input type="text" 
+                            id="productName" 
+                            formControlName="productName" class="form-control" 
+                            placeholder="Ürün adı"/>
+                        </div>
+                    </div>
+                   
+                    <div class="mb-3">
+                        <label for="categoryId">Kategori</label>
+                        <div class="form-group">
+                            <input type="number" 
+                            id="categoryId" 
+                            formControlName="categoryId" class="form-control" 
+                            placeholder="Kategori"/>
+                        </div>
+                    </div>
+                   <div class="mb-3">
+                    <label for="unitsInStock">Stok Adedi</label>
+                    <div class="form-group">
+                        <input type="number" 
+                        id="unitsInStock" 
+                        formControlName="unitsInStock" class="form-control" 
+                        placeholder="Stok adedi"/>
+                    </div>
+                   </div>
+                    <div  class="mb-3">
+                        <label for="unitPrice">Birim Fiyatı</label>
+                        <div class="form-group">
+                            <input type="number" 
+                            id="unitPrice" 
+                            formControlName="unitPrice" class="form-control" 
+                            placeholder="Fiyatı"/>
+                        </div>
+                    </div>
+                    
+                </form>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-fill btn-primary" (click)="add()">Ekle</button>
+            </div>
+        </div>
+        
     </div>
-  </div>
+    
 </div>
